--- a/react-backend/package.json
+++ b/react-backend/package.json
@@ -6,12 +6,18 @@
     "start": "supervisor ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^1.0.3",
     "body-parser": "~1.18.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.15.5",
+    "express-session": "^1.15.6",
+    "express-validator": "^4.3.0",
     "jade": "~1.11.0",
     "morgan": "~1.9.0",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "password-hash-and-salt": "^0.1.4",
     "pg-promise": "^7.3.3",
     "serve-favicon": "~2.4.5",
     "supervisor": "^0.12.0"
