--- a/react-backend/package.json
+++ b/react-backend/package.json
@@ -6,7 +6,7 @@
     "start": "supervisor ./bin/www"
   },
   "dependencies": {
-    "bcrypt": "^1.0.3",
+    "bcryptjs": "^2.4.3",
     "body-parser": "~1.18.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
